study: HashMap 키 비교 실험 분리와 내부 코드 한 줄 해설